[Add] Add My name

--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@
     <section id="sec-6">
         <div class="container">
             <div class="about">
+                <h1>Created By : Jayrajsinh Barad</h1>
                 <h1>About Company</h1>
                 <h2>
                     CONSTRUCTION 
